Обновил вёрстку каталога и страницы товара

--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
             <li>
               <a href="#">Прайс-лист</a>
             </li>
-            <li class="active">
+            <li>
               <a href="#">Магазин</a>
             </li>
             <li>
@@ -38,11 +38,8 @@
     </header>
     <main class="shop-main">
       <div class="container">
-        <h1 class="main-head">
-          Средства для ухода
-        </h1>
-        <div class="breadcrumbs">
-          <ul>
+        <h1>Средства для ухода</h1>
+          <ul class="breadcrumbs">
             <li>
               <a href="#">Главная</a>
             </li>
@@ -53,84 +50,122 @@
               <a>Средства для ухода</a>
             </li>
           </ul>
-        </div>
         <form class="selection-form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset>
             <legend class="form-legend">Производители:</legend>
-            <input type="checkbox" name="Baxter of California" checked>
-            <input type="checkbox" name="Mr Natty">
-            <input type="checkbox" name="Suavecito" checked>
-            <input type="checkbox" name="Malin+Goetz">
-            <input type="checkbox" name="Murray`s">
-            <input type="checkbox" name="American crew" checked>
+            <label>
+              <input type="checkbox" name="Baxter of California" checked>
+              Baxter of California
+            </label>
+            <label>
+              <input type="checkbox" name="Mr Natty">
+              Mr Natty
+            </label>
+            <label>
+              <input type="checkbox" name="Suavecito" checked>
+              Suavecito
+            </label>
+            <label>
+              <input type="checkbox" name="Malin+Goetz">
+              Malin+Goetz
+            </label>
+            <label>
+              <input type="checkbox" name="Murray`s">
+              Murray`s
+            </label>
+            <label>
+              <input type="checkbox" name="American crew" checked>
+              American crew
+            </label>
           </fieldset>
           <fieldset>
             <legend class="form-legend">Группы товаров:</legend>
-            <input type="radio" name="item-category" value="Shaving accessories">
-            <input type="radio" name="item-category" value="Care funds" checked>
-            <input type="radio" name="item-category" value="Accessories">
+            <label>
+              <input type="radio" name="item-category" value="Shaving accessories">
+              Shaving accessories
+            </label>
+            <label>
+              <input type="radio" name="item-category" value="Care funds" checked>
+              Care funds
+            </label>
+            <label>
+              <input type="radio" name="item-category" value="Accessories">
+              Accessories
+            </label>
             <button type="submit" value="Показать"></button>
           </fieldset>
         </form>
         <section class="shop-catalog">
           <article class="catalog-item">
+            <a href="#">
             <img src="http://placehold.it/150x100" alt="img-1">
-            <p>
+            <h3>
               Набор для путешествий<br>
               &#171;Baxter of California&#187;
-            </p>
+            </h3>
+          </a>
             <span>2900 руб.</span>
             <a href="#">Купить</a>
           </article>
           <article class="catalog-item">
+            <a href="#">
             <img src="http://placehold.it/150x100" alt="img-2">
-            <p>
+            <h3>
               Увлажняющий кондиционер<br>
               &#171;Baxter of California&#187;
-            </p>
+            </h3>
+          </a>
             <span>750 руб.</span>
             <a href="#">Купить</a>
           </article>
           <article class="catalog-item">
+            <a href="#">
             <img src="http://placehold.it/150x100" alt="img-3">
-            <p>
+            <h3>
               Гель для волос<br>
               &#171;Suavecito&#187;
-            </p>
+            </h3>
+          </a>
             <span>290 руб.</span>
             <a href="#">Купить</a>
           </article>
           <article class="catalog-item">
+            <a href="#">
             <img src="http://placehold.it/150x100" alt="img-4">
-            <p>
+            <h3>
               Глина для укладки волос<br>
               &#171;American Crew&#187;
-            </p>
+            </h3>
+          </a>
             <span>500 руб.</span>
             <a href="#">Купить</a>
           </article>
           <article class="catalog-item">
+            <a href="#">
             <img src="http://placehold.it/150x100" alt="img-5">
-            <p>
+            <h3>
               Гель для волос<br>
               &#171;American Crew&#187;
-            </p>
+            </h3>
+          </a>
             <span>300 руб.</span>
             <a href="#">Купить</a>
           </article>
           <article class="catalog-item">
+            <a href="#">
             <img src="http://placehold.it/150x100" alt="img-6">
-            <p>
-              Набор для бритья<br>
+              <h3>
+                Набор для бритья<br>
               &#171;Baxter of California&#187;
-            </p>
+            </h3>
+              </a>
             <span>3900 руб.</span>
             <a href="#">Купить</a>
           </article>
         </section>
         <section class="catalog-pages">
           <a href="#">1</a>
-          <a class="now-active">2</a>
+          <a>2</a>
           <a href="#">3</a>
           <a href="#">4</a>
         </section>
