--- a/catalog-item.html
+++ b/catalog-item.html
@@ -23,7 +23,7 @@
             <li>
               <a href="#">Прайс-лист</a>
             </li>
-            <li class="active">
+            <li>
               <a href="#">Магазин</a>
             </li>
             <li>
@@ -41,8 +41,7 @@
         <h1 class="main-head">
           Набор для путешествий &#171;Baxter of California&#187;
         </h1>
-        <div class="breadcrumbs">
-          <ul>
+          <ul class="breadcrumbs">
             <li>
               <a href="#">Главная</a>
             </li>
@@ -56,9 +55,11 @@
               <a>Набор для путешествий &#171;Baxter of California&#187;</a>
             </li>
           </ul>
-        </div>
-        <section class="item-main-img">
+        <section class="item-img">
           <img src="http://placehold.it/350x400" alt="main-img">
+          <img src="http://placehold.it/100x100" alt="img-1">
+          <img src="http://placehold.it/100x100" alt="img-2">
+          <img src="http://placehold.it/100x100" alt="img-3">
         </section>
         <section class="item-description">
           <p>
@@ -72,24 +73,16 @@
             умывания, увлажняющий крем, крем для бритья, шампунь. Набор также
             может стать отличным подарком.
           </p>
-        </section>
-        <section class="item-btn-buy">
           <span>2900 руб.</span>
           <a href="#">Купить</a>
-        </section>
-        <section class="item-content">
-          <ul>
+          <h2>В набор входят</h2>
+          <ul class="item-content">
             <li>Средство для умывания (50 мл)</li>
             <li>Увлажняющий крем (50 мл)</li>
             <li>Крем для бритья (50 мл)</li>
             <li>Крем после бритья, шампунь (50 мл)</li>
             <li>Удобная кожанная косметичка</li>
           </ul>
-        </section>
-        <section class="item-other-img">
-          <img src="http://placehold.it/100x100" alt="img-1">
-          <img src="http://placehold.it/100x100">
-          <img src="http://placehold.it/100x100">
         </section>
       </div>
     </main>
