Нарезал изображения с макета и вставил их в разметку

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="logo">
           <a href="#">
-            <img src="http://placehold.it/100x50" alt="logo">
+            <img src="img/logo.png" width="111" height="24" alt="logo">
           </a>
         </div>
         <nav class="main-nav">
@@ -56,10 +56,10 @@
             </li>
           </ul>
         <section class="item-img">
-          <img src="http://placehold.it/350x400" alt="main-img">
-          <img src="http://placehold.it/100x100" alt="img-1">
-          <img src="http://placehold.it/100x100" alt="img-2">
-          <img src="http://placehold.it/100x100" alt="img-3">
+          <img src="img/item-main.jpg" width="486" height="524" alt="main-img">
+          <img src="img/item-1.jpg" width="140" height="149" alt="img-1">
+          <img src="img/item-2.jpg" width="140" height="149" alt="img-2">
+          <img src="img/item-3.jpg" width="140" height="149" alt="img-3">
         </section>
         <section class="item-description">
           <p>
