--- a/catalog.html
+++ b/catalog.html
@@ -7,9 +7,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <div class="logo">
+        <div class="logo" style="background-color: black;">
           <a href="#">
-            <img src="http://placehold.it/100x50" alt="logo">
+            <img src="img/logo.png" width="111" height="24" alt="logo">
           </a>
         </div>
         <nav class="main-nav">
@@ -98,7 +98,7 @@
         <section class="shop-catalog">
           <article class="catalog-item">
             <a href="#">
-            <img src="http://placehold.it/150x100" alt="img-1">
+            <img src="img/img-1.jpg" width="220" height="165" alt="img-1">
             <h3>
               Набор для путешествий<br>
               &#171;Baxter of California&#187;
@@ -109,7 +109,7 @@
           </article>
           <article class="catalog-item">
             <a href="#">
-            <img src="http://placehold.it/150x100" alt="img-2">
+            <img src="img/img-2.jpg" width="220" height="165" alt="img-2">
             <h3>
               Увлажняющий кондиционер<br>
               &#171;Baxter of California&#187;
@@ -120,7 +120,7 @@
           </article>
           <article class="catalog-item">
             <a href="#">
-            <img src="http://placehold.it/150x100" alt="img-3">
+            <img src="img/img-3.jpg" width="220" height="165" alt="img-3">
             <h3>
               Гель для волос<br>
               &#171;Suavecito&#187;
@@ -131,7 +131,7 @@
           </article>
           <article class="catalog-item">
             <a href="#">
-            <img src="http://placehold.it/150x100" alt="img-4">
+            <img src="img/img-4.jpg" width="220" height="165" alt="img-4">
             <h3>
               Глина для укладки волос<br>
               &#171;American Crew&#187;
@@ -142,7 +142,7 @@
           </article>
           <article class="catalog-item">
             <a href="#">
-            <img src="http://placehold.it/150x100" alt="img-5">
+            <img src="img/img-5.jpg" width="220" height="165" alt="img-5">
             <h3>
               Гель для волос<br>
               &#171;American Crew&#187;
@@ -153,7 +153,7 @@
           </article>
           <article class="catalog-item">
             <a href="#">
-            <img src="http://placehold.it/150x100" alt="img-6">
+            <img src="img/img-6.jpg" width="220" height="165" alt="img-6">
               <h3>
                 Набор для бритья<br>
               &#171;Baxter of California&#187;
