--- a/index.html
+++ b/index.html
@@ -125,5 +125,17 @@
         </section>
       </div>
     </footer>
+    <form class="log-in-form" action="https://echo.htmlacademy.ru" method="post">
+      <h2>Личный кабинет</h2>
+      <label>Введите пожалуйста свой логин и пароль
+        <input type="text" name="login" value="" placeholder="Логин">
+      </label>
+      <input type="password" name="password" value="" placeholder="Пароль">
+      <label>
+        <input type="checkbox" name="save" checked>
+        Запомните меня
+      </label>
+      <button class="btn" type="submit">Войти</button>
+    </form>
   </body>
 </html>
