Обновил разметку в соответствии с правками

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -57,15 +57,21 @@
           </ul>
         <section class="item-img">
           <img src="img/item-main.jpg" width="486" height="524" alt="main-img">
-          <img src="img/item-1.jpg" width="140" height="149" alt="img-1">
-          <img src="img/item-2.jpg" width="140" height="149" alt="img-2">
-          <img src="img/item-3.jpg" width="140" height="149" alt="img-3">
+          <a href="#">
+            <img src="img/item-1.jpg" width="140" height="149" alt="img-1">
+          </a>
+          <a href="#">
+            <img src="img/item-2.jpg" width="140" height="149" alt="img-2">
+          </a>
+          <a href="#">
+            <img src="img/item-3.jpg" width="140" height="149" alt="img-3">
+          </a>
         </section>
         <section class="item-description">
           <p>
             Есть в наличии
-            <span>Артикул: Dexter-AE</span>
           </p>
+          <span>Артикул: Dexter-AE</span>
           <p>
             Travel kit - Необходимый аксессуар во время любого путешествия.
             В аккуратной кожанной сумке находится всё, что нужно для бритья и
