--- a/catalog.html
+++ b/catalog.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Средства для ухода</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <div class="container">
-        <div class="logo" style="background-color: black;">
-          <a href="#">
-            <img src="img/logo.png" width="111" height="24" alt="logo">
-          </a>
-        </div>
-        <nav class="main-nav">
-          <ul>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="#">Прайс-лист</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a href="#">Вход</a>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <title>Средства для ухода</title>
+</head>
+<body>
+  <header class="main-header">
+    <div class="container">
+      <div class="logo" style="background-color: black;">
+        <a href="#">
+          <img src="img/logo.png" width="111" height="24" alt="logo">
+        </a>
       </div>
-    </header>
-    <main class="shop-main">
-      <div class="container">
-        <h1>Средства для ухода</h1>
-          <ul class="breadcrumbs">
-            <li>
-              <a href="#">Главная</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li class="disabled">
-              <a>Средства для ухода</a>
-            </li>
-          </ul>
+      <nav class="main-nav">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#" class="active">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-block">
+        <a href="#">Вход</a>
+      </div>
+    </div>
+  </header>
+  <main class="shop-main">
+    <div class="container">
+      <h1>Средства для ухода</h1>
+      <ul class="breadcrumbs">
+        <li>
+          <a href="#">Главная</a>
+        </li>
+        <li>
+          <a href="#">Магазин</a>
+        </li>
+        <li class="disabled">
+          <a>Средства для ухода</a>
+        </li>
+      </ul>
+      <aside class="selection">
         <form class="selection-form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset>
             <legend class="form-legend">Производители:</legend>
@@ -92,104 +93,105 @@
               <input type="radio" name="item-category" value="Accessories">
               Accessories
             </label>
-            <button type="submit" value="Показать"></button>
+            <button type="submit">Показать</button>
           </fieldset>
         </form>
-        <section class="shop-catalog">
-          <article class="catalog-item">
-            <a href="#">
+      </aside>
+      <section class="shop-catalog">
+        <article class="catalog-item">
+          <a href="#">
             <img src="img/img-1.jpg" width="220" height="165" alt="img-1">
             <h3>
-              Набор для путешествий<br>
-              &#171;Baxter of California&#187;
+              <span class="item-type">Набор для путешествий</span>
+              <span class="item-name">&#171;Baxter of California&#187;</span>
             </h3>
           </a>
-            <span>2900 руб.</span>
-            <a href="#">Купить</a>
-          </article>
-          <article class="catalog-item">
-            <a href="#">
+          <span>2900 руб.</span>
+          <a href="#">Купить</a>
+        </article>
+        <article class="catalog-item">
+          <a href="#">
             <img src="img/img-2.jpg" width="220" height="165" alt="img-2">
             <h3>
-              Увлажняющий кондиционер<br>
-              &#171;Baxter of California&#187;
+              <span class="item-type">Увлажняющий кондиционер</span>
+              <span class="item-name">&#171;Baxter of California&#187;</span>
             </h3>
           </a>
-            <span>750 руб.</span>
-            <a href="#">Купить</a>
-          </article>
-          <article class="catalog-item">
-            <a href="#">
+          <span>750 руб.</span>
+          <a href="#">Купить</a>
+        </article>
+        <article class="catalog-item">
+          <a href="#">
             <img src="img/img-3.jpg" width="220" height="165" alt="img-3">
             <h3>
-              Гель для волос<br>
-              &#171;Suavecito&#187;
+              <span class="item-type">Гель для волос</span>
+              <span class="item-name">&#171;Suavecito&#187;</span>
             </h3>
           </a>
-            <span>290 руб.</span>
-            <a href="#">Купить</a>
-          </article>
-          <article class="catalog-item">
-            <a href="#">
+          <span>290 руб.</span>
+          <a href="#">Купить</a>
+        </article>
+        <article class="catalog-item">
+          <a href="#">
             <img src="img/img-4.jpg" width="220" height="165" alt="img-4">
             <h3>
-              Глина для укладки волос<br>
-              &#171;American Crew&#187;
+              <span class="item-type">Глина для укладки волос</span>
+              <span class="item-name">&#171;American Crew&#187;</span>
             </h3>
           </a>
-            <span>500 руб.</span>
-            <a href="#">Купить</a>
-          </article>
-          <article class="catalog-item">
-            <a href="#">
+          <span>500 руб.</span>
+          <a href="#">Купить</a>
+        </article>
+        <article class="catalog-item">
+          <a href="#">
             <img src="img/img-5.jpg" width="220" height="165" alt="img-5">
             <h3>
-              Гель для волос<br>
-              &#171;American Crew&#187;
+              <span class="item-type">Гель для волос</span>
+              <span class="item-name">&#171;American Crew&#187;</span>
             </h3>
           </a>
-            <span>300 руб.</span>
-            <a href="#">Купить</a>
-          </article>
-          <article class="catalog-item">
-            <a href="#">
+          <span>300 руб.</span>
+          <a href="#">Купить</a>
+        </article>
+        <article class="catalog-item">
+          <a href="#">
             <img src="img/img-6.jpg" width="220" height="165" alt="img-6">
-              <h3>
-                Набор для бритья<br>
-              &#171;Baxter of California&#187;
+            <h3>
+              <span class="item-type">  Набор для бритья</span>
+              <span class="item-name">&#171;Baxter of California&#187;</span>
             </h3>
-              </a>
-            <span>3900 руб.</span>
-            <a href="#">Купить</a>
-          </article>
-        </section>
-        <section class="catalog-pages">
-          <a href="#">1</a>
-          <a>2</a>
-          <a href="#">3</a>
-          <a href="#">4</a>
-        </section>
-      </div>
-    </main>
-    <footer class="main-footer">
-      <div class="container">
-        <section class="footer-contacts">
-            Барбершоп «Бородинский»<br>
-            Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-            <a href="#">Как нас найти?</a><br>
-            Телефон: +7 (812) 666-02-66
-          </section>
-          <section class="footer-social">
-            <p>Давайте дружить!</p>
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-          </section>
-          <section class="footer-copyright">
-            <p>Разработано:</p>
-            <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-          </section>
-        </div>
-    </footer>
-  </body>
+          </a>
+          <span>3900 руб.</span>
+          <a href="#">Купить</a>
+        </article>
+      </section>
+      <section class="catalog-pages">
+        <a href="#">1</a>
+        <a class="active">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+      </section>
+    </div>
+  </main>
+  <footer class="main-footer">
+    <div class="container">
+      <section class="footer-contacts">
+        Барбершоп «Бородинский»<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a href="#">Как нас найти?</a><br>
+        Телефон: +7 (812) 666-02-66
+      </section>
+      <section class="footer-social">
+        <p>Давайте дружить!</p>
+        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      </section>
+      <section class="footer-copyright">
+        <p>Разработано:</p>
+        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+      </section>
+    </div>
+  </footer>
+</body>
 </html>
