--- a/catalog.html
+++ b/catalog.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Средства для ухода</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
-    <div class="container">
-      <div class="logo" style="background-color: black;">
+  <header class="catalog-header">
+    <div class="container clearfix">
+      <div class="logo">
         <a href="#">
           <img src="img/logo.png" width="111" height="24" alt="logo">
         </a>
       </div>
-      <nav class="main-nav">
+      <nav class="main-navigation">
         <ul>
           <li>
             <a href="#">Информация</a>
@@ -37,8 +38,8 @@
     </div>
   </header>
   <main class="shop-main">
-    <div class="container">
-      <h1>Средства для ухода</h1>
+    <div class="container clearfix">
+      <h1 class="catalog-name">Средства для ухода</h1>
       <ul class="breadcrumbs">
         <li>
           <a href="#">Главная</a>
@@ -97,7 +98,7 @@
           </fieldset>
         </form>
       </aside>
-      <section class="shop-catalog">
+      <section class="shop-catalog clearfix">
         <article class="catalog-item">
           <a href="#">
             <img src="img/img-1.jpg" width="220" height="165" alt="img-1">
