--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Набор для путешествий &#171;Baxter of California&#187;</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
+    <header class="catalog-item-header">
+      <div class="container clearfix">
         <div class="logo">
           <a href="#">
             <img src="img/logo.png" width="111" height="24" alt="logo">
           </a>
         </div>
-        <nav class="main-nav">
+        <nav class="main-navigation">
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -37,8 +38,8 @@
       </div>
     </header>
     <main class="item-main">
-      <div class="container">
-        <h1 class="main-head">
+      <div class="container clearfix">
+        <h1 class="item-name">
           Набор для путешествий &#171;Baxter of California&#187;
         </h1>
           <ul class="breadcrumbs">
@@ -55,33 +56,31 @@
               <a>Набор для путешествий &#171;Baxter of California&#187;</a>
             </li>
           </ul>
-        <section class="item-img">
-          <img src="img/item-main.jpg" width="486" height="524" alt="main-img">
+        <section class="item-img clearfix">
+          <img src="img/item-main.jpg" width="460" height="498" alt="main-img">
           <a href="#">
-            <img src="img/item-1.jpg" width="140" height="149" alt="img-1">
+            <img src="img/item-1.jpg" width="140" height="150" alt="img-1">
           </a>
           <a href="#">
-            <img src="img/item-2.jpg" width="140" height="149" alt="img-2">
+            <img src="img/item-2.jpg" width="140" height="150" alt="img-2">
           </a>
           <a href="#">
-            <img src="img/item-3.jpg" width="140" height="149" alt="img-3">
+            <img src="img/item-3.jpg" width="140" height="150" alt="img-3">
           </a>
         </section>
-        <section class="item-description">
-          <p>
-            Есть в наличии
-          </p>
-          <span>Артикул: Dexter-AE</span>
-          <p>
+        <section class="item-description clearfix">
+          <span class="availability">Есть в наличии</span>
+          <span class="code">Артикул: Dexter-AE</span>
+          <p class="clearfix">
             Travel kit - Необходимый аксессуар во время любого путешествия.
             В аккуратной кожанной сумке находится всё, что нужно для бритья и
             ухода за кожей во время рабочей поездки или отдыха: Средство для
             умывания, увлажняющий крем, крем для бритья, шампунь. Набор также
             может стать отличным подарком.
           </p>
-          <span>2900 руб.</span>
+          <span class="price">2900 руб.</span>
           <a href="#">Купить</a>
-          <h2>В набор входят</h2>
+          <h2>В набор входят:</h2>
           <ul class="item-content">
             <li>Средство для умывания (50 мл)</li>
             <li>Увлажняющий крем (50 мл)</li>
@@ -93,7 +92,7 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
             Барбершоп «Бородинский»<br>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
