Обновил разметку после консультации

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,14 +6,14 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="catalog-item-header">
+    <header class="catalog-header">
       <div class="container clearfix">
         <div class="logo">
           <a href="#">
             <img src="img/logo.png" width="111" height="24" alt="logo">
           </a>
         </div>
-        <nav class="main-navigation">
+        <nav class="catalog-navigation">
           <ul>
             <li>
               <a href="#">Информация</a>
