--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
           <img src="img/logo.png" width="111" height="24" alt="logo">
         </a>
       </div>
-      <nav class="main-navigation">
+      <nav class="catalog-navigation">
         <ul>
           <li>
             <a href="#">Информация</a>
@@ -104,66 +104,84 @@
             <img src="img/img-1.jpg" width="220" height="165" alt="img-1">
             <h3>
               <span class="item-type">Набор для путешествий</span>
-              <span class="item-name">&#171;Baxter of California&#187;</span>
+              <br>
+              <span class="item-series">&#171;Baxter of California&#187;</span>
             </h3>
           </a>
+          <div class="item-buy">
           <span>2900 руб.</span>
           <a href="#">Купить</a>
+        </div>
         </article>
         <article class="catalog-item">
           <a href="#">
             <img src="img/img-2.jpg" width="220" height="165" alt="img-2">
             <h3>
               <span class="item-type">Увлажняющий кондиционер</span>
-              <span class="item-name">&#171;Baxter of California&#187;</span>
+              <br>
+              <span class="item-series">&#171;Baxter of California&#187;</span>
             </h3>
           </a>
+          <div class="item-buy">
           <span>750 руб.</span>
           <a href="#">Купить</a>
+        </div>
         </article>
         <article class="catalog-item">
           <a href="#">
             <img src="img/img-3.jpg" width="220" height="165" alt="img-3">
             <h3>
               <span class="item-type">Гель для волос</span>
-              <span class="item-name">&#171;Suavecito&#187;</span>
+              <br>
+              <span class="item-series">&#171;Suavecito&#187;</span>
             </h3>
           </a>
+          <div class="item-buy">
           <span>290 руб.</span>
           <a href="#">Купить</a>
+        </div>
         </article>
         <article class="catalog-item">
           <a href="#">
             <img src="img/img-4.jpg" width="220" height="165" alt="img-4">
             <h3>
               <span class="item-type">Глина для укладки волос</span>
-              <span class="item-name">&#171;American Crew&#187;</span>
+              <br>
+              <span class="item-series">&#171;American Crew&#187;</span>
             </h3>
           </a>
+          <div class="item-buy">
           <span>500 руб.</span>
           <a href="#">Купить</a>
+        </div>
         </article>
         <article class="catalog-item">
           <a href="#">
             <img src="img/img-5.jpg" width="220" height="165" alt="img-5">
             <h3>
               <span class="item-type">Гель для волос</span>
-              <span class="item-name">&#171;American Crew&#187;</span>
+              <br>
+              <span class="item-series">&#171;American Crew&#187;</span>
             </h3>
           </a>
+          <div class="item-buy">
           <span>300 руб.</span>
           <a href="#">Купить</a>
+        </div>
         </article>
         <article class="catalog-item">
           <a href="#">
             <img src="img/img-6.jpg" width="220" height="165" alt="img-6">
             <h3>
               <span class="item-type">  Набор для бритья</span>
-              <span class="item-name">&#171;Baxter of California&#187;</span>
+              <br>
+              <span class="item-series">&#171;Baxter of California&#187;</span>
             </h3>
           </a>
+          <div class="item-buy">
           <span>3900 руб.</span>
           <a href="#">Купить</a>
+        </div>
         </article>
       </section>
       <section class="catalog-pages">
@@ -175,7 +193,7 @@
     </div>
   </main>
   <footer class="main-footer">
-    <div class="container">
+    <div class="container clearfix">
       <section class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
